# fraud-reasoning-engine

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent_skills/: bq_sql_skill.py  deck_skill.py  graph_skill.py  storage_skill.py
api/: history_manager.py  main.py
app/: streamlit_app.py
mock_data/: generate_transactions.py
reasoning_engine/: fraud_investigator.py
scripts/: generate_transactions.py
ui/: Dockerfile  streamlit_app.py
ui/static/templates/: theme.pptx
