[tool.poetry]
name = "fraud-reasoning-engine"
version = "0.1.0"
description = "Fraud Reasoning Engine PoC — Vertex AI Reasoning Engine with Text-to-SQL capabilities."
authors = ["Evan G <evan.f.l.gloria@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
faker = "^33.0.0"
pandas = "^2.2.0"
google-cloud-bigquery = "^3.25.0"
google-cloud-aiplatform = "^1.60.0"
langchain = "^0.2.0"
langchain-core = "^0.2.0"
langchain-google-vertexai = "^1.0.0"
streamlit = "^1.32.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
db-dtypes = "^1.3.0"
python-dotenv = "^1.0.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
pandas-gbq = "^0.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
